	PR c++/84802 - ICE capturing uninstantiated class.

* lambda.c (build_capture_proxy): Call complete_type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258447 138bc75d-0d04-0410-961f-82ee72b054a4